# finch

./: .env.example  .gitignore  README.md  finch_sdd_spec.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 72a0d1bdad04_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py  routes_ai_actions.py  routes_audio.py  routes_documents.py  routes_health.py  routes_jobs.py  routes_llm_settings.py  routes_notes.py  routes_recordings.py  routes_settings.py  routes_speaker_profiles.py  routes_transcription_settings.py  routes_transcripts.py  routes_user_settings.py  routes_voiceprint_profiles.py
backend/app/capabilities/: checker.py  error_catalog.py  hf_hints.py  startup.py  status.py
backend/scripts/: transcribe_file.py  validate_diarization.py
backend/tests/: conftest.py  test_ai_action_service.py  test_ai_actions.py  test_audio_upload.py  test_audio_upload_streaming.py  test_capability_status.py  test_database_migration.py  test_diarization_service.py  test_documents_api.py  test_health.py  test_job_queue.py  test_llm_config.py  test_llm_factory.py  test_llm_settings_api.py  test_notes_api.py  test_openai_compatible_client.py  test_preference_store.py  test_recording_api.py  test_schema_parity.py  test_speaker_api.py  test_speaker_memory.py  test_startup_diagnostics.py  test_transcript_api.py  test_transcript_text_service.py  test_transcription_jobs.py  test_user_settings_api.py  test_voiceprint_api.py  test_voiceprint_matching.py  test_voiceprint_memory.py
docs/: README.md  (+9 more)
(+331 files in other folders)
