[project]
name = "finch-backend"
version = "0.1.0"
description = "Finch local ASR transcription backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "omegaconf>=2.3.1",
    "pyannote-audio>=4.0.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "qwen-asr>=0.0.6",
    "soundfile>=0.14.0",
    "speechbrain>=1.1.0",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "torch>=2.12.1",
    "transformers>=4.57.6",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv.scripts]
dev-debug = { cmd = "uvicorn app.main:app --reload", env = { DEBUG_MODE = "true" } }
